--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -1,6 +1,7 @@
 .button {
-    background-color: orange;
-    border: 1px solid black;
+    background-color: #09814a;
+    border: 1px solid #2d4739;
+    color: white;
     font-size: 1.1rem;
     font-weight: 100;
     
