--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -6,6 +6,9 @@
     display: flex;
     flex-direction: column-reverse;
     align-items: center;
+
+    background-color: #09814a;
+    color: white;
 }
 
 .footerMenu ul {
@@ -21,7 +24,7 @@
 }
 .footerMenuLink a {
     text-decoration: none;
-    color: #252422;
+    color: white;
     font-weight: 400;
 }
 
